# chint-weekly-digest

./: .gitignore  CHINT_Russia_новостные_дайджесты_2025-2026.docx  README.md  pyproject.toml  Запустить дайджест Windows.bat  Запустить дайджест.command
config/: sources.json
digest/: __init__.py  cli.py  codex_runner.py  collector.py  document.py  models.py  profile.py
profile/: style_profile.json
prompts/: generate_digest.md  learn_style.md
schemas/: digest.schema.json  style_profile.schema.json
scripts/: run_digest_windows.ps1
tests/: test_codex_runner.py  test_collector.py  test_document.py  test_profile.py
