[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "chint-weekly-digest"
version = "1.0.0"
description = "Weekly Russian-language news digest generator for CHINT Russia, powered by Codex CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "googlenewsdecoder>=0.1.7,<0.2",
  "python-docx>=1.1.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
chint-digest = "digest.cli:main"

[tool.setuptools.packages.find]
include = ["digest*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
